[package]
name = "crash-example"
version = "0.1.0"
authors = ["Ashley Ruglys <ashley.ruglys@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.8"
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs" }

[patch.crates-io]
web-sys = { git = "https://github.com/rustwasm/wasm-bindgen" }
wasm-bindgen = { git = "https://github.com/rustwasm/wasm-bindgen" }
js-sys = { git = "https://github.com/rustwasm/wasm-bindgen" }
